--- a/Machine Learning/Random Forest/Random Forest-Titanic Case Study.ipynb
+++ b/Machine Learning/Random Forest/Random Forest-Titanic Case Study.ipynb
@@ -72,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +302,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -458,7 +462,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1710,13 +1716,14 @@
     "#feature vector\n",
     "#Parch is not required, as it is not who is whose brother or father\n",
     "columns=['Fare','Sex_1','Age']\n",
+    "feature_selection=df_train[columns]\n",
     "#'SibSp'\n",
     "#'Parch'\n",
     "#'Fare',\n",
     "\n",
     "#outcome\n",
     "y=lables=targets=df_train['Survived']\n",
-    "feature_selection=df_train[columns]"
+    "\n"
    ]
   },
   {
@@ -1743,7 +1750,9 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1889,7 +1898,9 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1912,7 +1923,9 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1931,7 +1944,9 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1953,7 +1968,9 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1983,7 +2000,9 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2076,7 +2095,9 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2201,7 +2222,9 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2292,7 +2315,9 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2387,7 +2412,9 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2533,13 +2560,15 @@
    "outputs": [],
    "source": [
     "#feature_selection\n",
-    "prediction=mytree.predict(feature_selection)"
+    "    prediction=mytree.predict(feature_selection)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 212,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2926,16 +2955,247 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Bagging Approach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "Bagging=BaggingClassifier(n_estimators=10,max_features=feature_selection.shape[1])\n",
+    "#n_estimators=10,max_features=feature_selection.shape[1]\n",
+    "#max_samples=10.1,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Model=Bagging.fit(feature_selection,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 291,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(Model.score(feature_selection, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Bag_prediction=Model.predict(feature_selection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[536,  13],\n",
+       "       [ 24, 318]])"
+      ]
+     },
+     "execution_count": 293,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Bag_confusion=metrics.confusion_matrix(y,Bag_prediction)\n",
+    "Bag_confusion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[536,  13],\n",
+       "       [ 24, 318]])"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Bag_confusion=metrics.confusion_matrix(y,Bag_prediction)\n",
+    "Bag_confusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Random Forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForest"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "Modelforest=RandomForestClassifier(max_depth=10,criterion='entropy',n_estimators=100,min_samples_split=2,random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myforest=Modelforest.fit(feature_selection,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "singletree=Modelforest.estimators_[5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import export_graphviz\n",
+    "export_graphviz(singletree,out_file='RF_titanic.dot',feature_names=columns,label='all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#from subprocess import call\n",
+    "#call(['dot', '-Tpng', 'tree.dot', '-o', 'tree.png', '-Gdpi=600'])\n",
+    "import os\n",
+    "os.system('dot -Tpng RF_titanic.dot -o RF_titanic.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9102132435465768\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(myforest.score(feature_selection, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Rf_prediction=myforest.predict(feature_selection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Fare', 0.41121961011473446),\n",
+       " ('Sex_1', 0.2989190082658579),\n",
+       " ('Age', 0.28986138161940783)]"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip(columns,myforest.feature_importances_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Random_confusion=metrics.confusion_matrix(y,Rf_prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[523,  26],\n",
+       "       [ 54, 288]])"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Random_confusion"
    ]
   }
  ],
